# plox

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
plox/: __main__.py  errors.py  scanner.py  token.py  token_type.py
requirements/: base.txt  dev.txt
tests/: test_scanner.py  test_token.py  test_token_type.py
