[project]
name = "plox"
authors = [{ name = "Kamil Turek", email = "kamil.turek@hotmail.com" }]
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pytest", "pytest-cov"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "C901", "D", "FIX002", "PLR0912", "TD003", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101", # Use of `assert` is necessary in tests
]
